# cubic_spline

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: cubic_spline1d.hpp  cubic_spline2d.hpp
src/: cubic_spline1d.cpp  cubic_spline2d.cpp
test/: cubicspline_test.cpp
